@@ -478,9 +478,9 @@ scanline = img.export_pixels(0, r, img.columns, 1, "RGB");
     onmouseout="this.style.display='none';framed.style.display='';"
     src="ex/images/Flower_Hat.jpg" alt="frame example" title=
     "Click to see the example script" /><!--
-                                              This img tag displays the framed image when the mouse is not over
-                                              --><img class="hide"
-    id="framed" onmouseover=
+                                                  This img tag displays the framed image when the mouse is not over
+                                                  --><img class=
+    "hide" id="framed" onmouseover=
     "this.style.display='none';frameless.style.display='';" src=
     "ex/frame.jpg" alt="frame example" /></a> <img src=
     "ex/images/spin.gif" alt="" style="margin-bottom: 280px" title=
@@ -753,9 +753,9 @@ image.get_exif_by_number() &raquo;
     more opaque than the column on its left, so that the resulting
     composite changes smoothly from color on the left to
     black-and-white on the right.</p><!--
-                                                    Reduce the size of the original image by specifying
-                                                    the size of the example image.
-                                                    -->
+                                                        Reduce the size of the original image by specifying
+                                                        the size of the example image.
+                                                        -->
 
     <p class="rollover"><a href=
     "javascript:popup('get_pixels.rb.html')"><img width="384"
@@ -2011,7 +2011,7 @@ old = image.pixel_color(20,40,"white")
 
     <h4>Magick API</h4>
 
-    <p>PosterizeImage</p>
+    <p>PosterizeImage (available in ImageMagick 6.0.0)</p>
   </div>
 
   <p class="spacer">&nbsp;</p>
