@@ -773,6 +773,10 @@ exit
       <dt><a href="image3.html#shave">shave</a></dt>
 
       <dd>Shave regions from the edges of the image</dd>
+
+      <dt><a href="image3.html#trim">trim</a></dt>
+
+      <dd>Remove borders from the edges of the image</dd>
     </dl>
 
     <h4>Enhance</h4>
