@@ -1,5 +1,6 @@
 RMagick 1.6.0
     o Added posterize method to Image class (ImageMagick 6.0.0)
+    o Added trim and trim! methods to Image class
 
 RMagick 1.5.0
     o Added meaningful implementations of dup and clone to the Image and Draw
